--- a/estilos/estilo.css
+++ b/estilos/estilo.css
@@ -16,9 +16,50 @@
 
 main p{
     margin: 20px 0px;
-    text-align: center;
 }
 body {
     background-color: var(--cor0);
     font-family: Arial, Helvetica, sans-serif;
+}
+
+header {
+    height: 80px;
+    background-image: linear-gradient(to top, var(--cor3), var(--cor0));
+    color: white;
+    text-align: center;
+    border-radius: 10px,10px,0px,0px;
+}
+head > h1 {
+    color: white;
+    font-family: 'Lucida Sans';
+}
+
+nav {
+    background-color: var(--cor3);
+    padding: 5px;
+    box-shadow: 0px 8px 8px rgba(0, 0, 0, 0.192);
+    border-radius: 0px, 0px, 10px, 10px;
+}
+nav > a {
+    color: var(--cor4);
+    padding: 5px;
+    margin: 10px;
+    text-decoration: none;
+    font-weight: bold;
+    transition-duration: .5s;
+}
+nav > a:hover {
+    background-color: var(--cor1);
+    color: var(--cor0);
+    padding: 5px 15px 5px 15px;
+    border-radius: 15px;
+}
+
+
+footer{
+    background-color: #200157;
+    color: white;
+    text-align: center;
+    font-size: 0.8en;
+    padding: 5px;
 }
