--- a/estilos/estilo.css
+++ b/estilos/estilo.css
@@ -1,12 +1,13 @@
 @charset "utf-8";
 
 :root {
-    --cor0:#390099;
-    --cor1:#9e0059;
-    --cor2:#ff0054;
-    --cor3:#ff5400;
-    --cor4:#ffbd00;
-    --cor5:#ffe066;
+    --cor0:#001c3d;
+    --cor1:#003d84;
+    --cor2:#108ad1;
+    --cor3:#18a9e8;
+    --cor4:#79cdf4;
+    --cor5:#aadffa;
+    --cor6:#daf0ff;
 }
 
 *{
@@ -24,24 +25,24 @@ body {
 
 header {
     height: 80px;
-    background-image: linear-gradient(to top, var(--cor3), var(--cor0));
+    background-image: linear-gradient(to top, var(--cor6), var(--cor0));
     color: white;
     text-align: center;
     border-radius: 10px,10px,0px,0px;
 }
 head > h1 {
-    color: white;
+    color: var(--cor6);
     font-family: 'Lucida Sans';
 }
 
 nav {
-    background-color: var(--cor3);
+    background-color: var(--cor6);
     padding: 5px;
     box-shadow: 0px 8px 8px rgba(0, 0, 0, 0.192);
     border-radius: 0px, 0px, 10px, 10px;
 }
 nav > a {
-    color: var(--cor4);
+    color: var(--cor0);
     padding: 5px;
     margin: 10px;
     text-decoration: none;
@@ -49,8 +50,8 @@ nav > a {
     transition-duration: .5s;
 }
 nav > a:hover {
-    background-color: var(--cor1);
-    color: var(--cor0);
+    background-color: var(--cor0);
+    color: var(--cor5);
     padding: 5px 15px 5px 15px;
     border-radius: 15px;
 }
