--- a/estilos/estilo.css
+++ b/estilos/estilo.css
@@ -15,11 +15,9 @@
     padding: 0px;
 }
 
-main p{
-    margin: 20px 0px;
-}
+
 body {
-    background-color: var(--cor0);
+    background-color: var(--cor6);
     font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -28,6 +26,7 @@ header {
     background-image: linear-gradient(to top, var(--cor6), var(--cor0));
     color: white;
     text-align: center;
+    padding-top: 20px;
     border-radius: 10px,10px,0px,0px;
 }
 head > h1 {
@@ -56,10 +55,21 @@ nav > a:hover {
     border-radius: 15px;
 }
 
+main {
+    min-width: 300px;
+    max-width: 1000px;
+    margin: auto;
+    padding: 20px;
+
+}
+main p{
+    margin: 20px 0px;
+}
+
 
 footer{
-    background-color: #200157;
-    color: white;
+    background-image: linear-gradient(to bottom, var(--cor6), var(--cor0));
+    color: var(--cor0);
     text-align: center;
     font-size: 0.8en;
     padding: 5px;
